FLOW-760 bug fixes and alignment issues

--- a/packages/flow-core/src/components/f-tcell/f-tcell.scss
+++ b/packages/flow-core/src/components/f-tcell/f-tcell.scss
@@ -9,4 +9,7 @@ f-tcell {
 	.cell-radio {
 		display: var(--display-cell-radio);
 	}
+	.details-toggle {
+		margin-left: auto;
+	}
 }
